# learning-rust-projects

./: README.md
mini-grep/: Cargo.toml  README.md
mini-grep/src/: main.rs
mycalc/: Cargo.toml  README.md
mycalc/src/: lib.rs  main.rs
mycalc/tests/: cli.rs
rustic-notes/: Cargo.toml  README.md
rustic-notes/src/: main.rs
