[package]
name = "rustic-notes"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1.0"
tempfile = "3.10"
shell-words = "1.1"